--- a/produtos.html
+++ b/produtos.html
@@ -48,56 +48,34 @@
   
         <div class="backgroundPagesContent">
 
-          <div class="titulo">Galeria</div>
+          <div class="titulo">Produtos</div>
           
 
           <div class="galeria">
 
-            <span class="spanFotos">
-              <img src="/src/originalRes/fotoj1.jpg" width="360" height="600"/>
-              <span class="legenda">Foto por: Jorge Sab</span>
+            <span class="bordaProduto">
+              <img class="fotoProduto" src="/src/originalRes/IMG_7398-compressed.jpg"/>
+              <span class="produtoLegenda">Hidromel Bouchet</span>
+              <div class="textoProduto">
+                O hidromel bouchet é uma variação da bebida tradicional, tendo como principal diferença o processo de fervura do mel antes da fermentação, conferindo ao produto uma cor avermelhada assim como características de um gosto mais marcante e amadeirado, com toques de caramelo e marshmallow. Além disso, nosso hidromel bouchet conta com o processo de maturação em chips de carvalho, deixando o seu gosto ainda mais complexo e interessante. Harmoniza bem com carne de porco e queijos.
+              </div>
+              <div class="textoProduto" style="text-align: center; padding-top: 10px; font-size: 25px;">
+                Valor: R$30 (500ml)
+              </div>
+              <a class="buttonProduto" href="reservar"> Reservar Agora</a>
             </span>
 
-            <span class="spanFotos">
-              <img src="/src/originalRes/fotoj2.jpg" width="360" height="600">
-              <span class="legenda">Foto por: Jorge Sab</span>
+            <span class="bordaProduto">
+              <img class="fotoProduto" src="/src/originalRes/trad.jpg">
+              <span class="produtoLegenda">Hidromel Tradicional</span>
+              <div class="textoProduto">
+                Feito a partir da fermentação de mel diluído em água com leveduras selecionadas, a versão clássica do hidromel é uma das bebidas mais antigas da humanidade. Possui sabor leve, com toques refrescantes e moderadamente adocicados e com os sabores clássicos do mel que inundam o paladar de qualquer pessoa que experimenta. Harmoniza bem com comidas leves como peixes e pães.
+              </div>
+              <div class="textoProduto" style="text-align: center; padding-top: 50px; margin-bottom: 20px; font-size: 25px;">
+                Valor: R$30 (500ml)
+              </div>
+              <a class="buttonProduto" href="reservar"> Reservar Agora</a>
             </span>
-
-            <span class="spanFotos">
-              <img src="/src/originalRes/fotoj3.jpg" width="360" height="600">
-              <span class="legenda">Foto por: Jorge Sab</span>
-            </span>
-
-            <span class="spanFotos">
-              <img src="/src/originalRes/garrafasNjord.jpg" width="360" height="600">
-              <span class="legenda">Foto por: Frevo's Fermentaria</span>
-            </span>
-
-            <span class="spanFotos">
-              <img src="/src/originalRes/ursoLR-3.jpg" width="360" height="600">
-              <span class="legenda">Foto por: Henrique Megid</span>
-            </span>
-
-            <span class="spanFotos">
-              <img src="/src/originalRes/fotojoao.jpg" width="360" height="600">
-              <span class="legenda">Foto por: João Guilherme</span>
-            </span>
-
-            <span class="spanFotos">
-              <img src="/src/originalRes/IMG_7398-compressed.jpg" width="360" height="600">
-              <span class="legenda">Foto por: Henrique Megid</span>
-            </span>
-
-            <span class="spanFotos">
-              <img src="/src/originalRes/hidromelnataca.jpg" width="360" height="600">
-              <span class="legenda">Foto por: Frevo's Fermentaria</span>
-            </span>
-
-            <span class="spanFotos">
-              <img src="/src/originalRes/tacajoao.jpg" width="360" height="600">
-              <span class="legenda">Foto por: João Guilherme</span>
-            </span>
-
 
           </div>
 
