--- a/reservas.html
+++ b/reservas.html
@@ -96,10 +96,11 @@
   <body>
 
 
-    <div class="navBar" style="min-width: 1200px;">
+    <div class="navBar">
       
-      <a href="index" class="frontLink">Frevo's Fermentaria</a>
-
+      <a href="index" class="frontLink">
+        <img src="/src/logo-outline.png" class="logo-icon">
+      </a>
 
       <input type="checkbox" href="#" class="menu-toggle" id="menu-toggle"/>
       <div class="div-hitbox">
@@ -113,11 +114,12 @@
 
 
       <div class="buttons">
-        <a class="linkComprar" href="comprar" style="padding-right: 40px; text-decoration: none; color: white;">Comprar</a>
-        <a class="linkQuemSomos" href="quemsomos" style="padding-right: 40px; text-decoration: none; color: white;">Quem Somos</a>
-        <a class="linkLevas" href="levas" style="padding-right: 40px; text-decoration: none; color: white;">Levas</a>
-        <a class="linkGaleria" href="galeria" style="padding-right: 40px; text-decoration: none; color: white;">Galeria</a>
-        <a class="linkContato" href="contato" style="padding-right: 40px; text-decoration: none; color: white;">Contato</a>
+        <a class="link linkProdutos" href="produtos">Produtos</a>
+        <a class="link linkReservar" href="reservar">Reservar</a>
+        <a class="link linkQuemSomos" href="quemsomos">Quem Somos</a>
+        <a class="link linkLevas" href="levas">Levas</a>
+        <a class="link linkGaleria" href="galeria">Galeria</a>
+        <a class="link linkContato" href="contato">Contato</a>
       </div>
 
     </div>
@@ -156,8 +158,8 @@
                 <th>ID</th>
                 <th>Nome</th>
                 <th>Idade</th>
-                <th>Produto</th>
-                <th>Quantidade</th>
+                <th>hBouchet</th>
+                <th>hTradicional</th>
                 <th>Total (R$)</th>
                 <th>Celular</th>
                 <th>Data</th>
