--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <script src="App.js"></script>
-    <script src="cadastrar.js"></script>
+    <script src="reservar.js"></script>
     <script src="listardados.js"></script>
-    <script src="remover.js"></script>    
+    <script src="remover.js"></script>
     <script src="firebaselogin.js"></script>
     <script src="searchTable.js"></script>
     <script src="downloadList.js"></script>
@@ -32,8 +32,9 @@
 <body>
     <div class="navBar">
       
-      <a href="index" class="frontLink">Frevo's Fermentaria</a>
-
+      <a href="index" class="frontLink">
+        <img src="/src/logo-outline.png" class="logo-icon">
+      </a>
 
       <input type="checkbox" href="#" class="menu-toggle" id="menu-toggle"/>
       <div class="div-hitbox">
@@ -47,11 +48,12 @@
 
 
       <div class="buttons">
-        <a class="linkComprar" href="comprar" style="padding-right: 40px; text-decoration: none; color: white;">Comprar</a>
-        <a class="linkQuemSomos" href="quemsomos" style="padding-right: 40px; text-decoration: none; color: white;">Quem Somos</a>
-        <a class="linkLevas" href="levas" style="padding-right: 40px; text-decoration: none; color: white;">Levas</a>
-        <a class="linkGaleria" href="galeria" style="padding-right: 40px; text-decoration: none; color: white;">Galeria</a>
-        <a class="linkContato" href="contato" style="padding-right: 40px; text-decoration: none; color: white;">Contato</a>
+        <a class="link linkProdutos" href="produtos">Produtos</a>
+        <a class="link linkReservar" href="reservar">Reservar</a>
+        <a class="link linkQuemSomos" href="quemsomos">Quem Somos</a>
+        <a class="link linkLevas" href="levas">Levas</a>
+        <a class="link linkGaleria" href="galeria">Galeria</a>
+        <a class="link linkContato" href="contato">Contato</a>
       </div>
 
     </div>
@@ -62,7 +64,8 @@
       <div class="blackOverlay">
         <div class="frontPicContent">
           <img class="logoAbraco" src="/src/abraco-de-urso-logo.png">
-          <div class="logoAbracoText">Experimente nosso tradicional hidromel bouchet, uma viagem pelos aromas do interior do Estado de São Paulo. </div>
+          <div class="logoAbracoText">Experimente nossos hidroméis artesanais, uma viagem pelos aromas do interior do Estado de São Paulo. </div>
+          <a class="buttonFront" href="reservar"> Reservar Agora</a>
         </div>
       </div>
     </div>
