--- a/levas.html
+++ b/levas.html
@@ -13,8 +13,9 @@
 
     <div class="navBar">
       
-      <a href="index" class="frontLink">Frevo's Fermentaria</a>
-
+      <a href="index" class="frontLink">
+        <img src="/src/logo-outline.png" class="logo-icon">
+      </a>
 
       <input type="checkbox" href="#" class="menu-toggle" id="menu-toggle"/>
       <div class="div-hitbox">
@@ -28,11 +29,12 @@
 
 
       <div class="buttons">
-        <a class="linkComprar" href="comprar" style="padding-right: 40px; text-decoration: none; color: white;">Comprar</a>
-        <a class="linkQuemSomos" href="quemsomos" style="padding-right: 40px; text-decoration: none; color: white;">Quem Somos</a>
-        <a class="linkLevas" href="levas" style="padding-right: 40px; text-decoration: none; color: white;">Levas</a>
-        <a class="linkGaleria" href="galeria" style="padding-right: 40px; text-decoration: none; color: white;">Galeria</a>
-        <a class="linkContato" href="contato" style="padding-right: 40px; text-decoration: none; color: white;">Contato</a>
+        <a class="link linkProdutos" href="produtos">Produtos</a>
+        <a class="link linkReservar" href="reservar">Reservar</a>
+        <a class="link linkQuemSomos" href="quemsomos">Quem Somos</a>
+        <a class="link linkLevas" href="levas">Levas</a>
+        <a class="link linkGaleria" href="galeria">Galeria</a>
+        <a class="link linkContato" href="contato">Contato</a>
       </div>
 
     </div>
@@ -53,6 +55,7 @@
           <a class="buttonLeva" href="levas/leva3">Leva de Njord</a>
           <a class="buttonLeva" href="levas/leva4">Leva de Vanaheim</a>
           <a class="buttonLeva" href="levas/leva5">Leva de Eir</a>
+          <a class="buttonLeva" href="levas/leva6">Leva de Vinland</a>
         </div>
 
       </div>
