Fixed batch description

--- a/levas/leva7.html
+++ b/levas/leva7.html
@@ -49,8 +49,12 @@
         <div class="backgroundPagesContent">
 
           <div class="titulo">Leva de Ragnarok</div>
-          <div class="textBorderPages" style="margin-bottom: 14px;">
-            Durante as explorações dos povos escandinavos no final do século X, eles encontraram, muito a oeste da Groenlândia, uma terra fértil, verde e quente e as nomearam de "Vinland". O sonho de Vinland representa a coragem e paixão pela exploração e pela descoberta de coisas novas. O nome dessa leva representa um marco importante na nossa história, onde pela primeira vez estamos produzindo em maior escala dois tipos diferentes de hidromel, o nosso clássico Bouchet — feito com mel caramelizado — e o novo hidromel tradicional, feito com o mel cru. A experiência de criar um produto fora da nossa zona de conforto foi como explorar os mares escandinavos, mas podemos dizer que chegamos a Vinland com um excelente produto que você não pode deixar de experimentar.
+          <div class="textBorderPages" style="margin-bottom: 14px; width: 340px; text-align: left; line-height: 30px;">
+            Mel utilizado: Eucalipto <br>
+            Fabricado dia 7 de abril de 2023 <br>
+            Fermentado durante 2 semanas <br>
+            Decantado por uma semana <br>
+            Graduação alcoólica final: 12%
           </div>
           
         </div>
